unpackaged/objects/User.object
<CustomObject>
    <fields>
        <fullName>Azure_DevOps_Token__c</fullName>
        <label>Azure DevOps Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Azure_DevOps_Username__c</fullName>
        <label>Azure DevOps Username</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BDO__c</fullName>
        <label>BDO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARB</fullName>
                </value>
                <value>
                    <fullName>CalRecycle</fullName>
                </value>
                <value>
                    <fullName>DTSC</fullName>
                </value>
                <value>
                    <fullName>DPR</fullName>
                </value>
                <value>
                    <fullName>SWRCB</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>OEHHA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAMS_Division_Program__c</fullName>
        <label>CAMS Division/Program</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BDO__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agency Secretary</fullName>
                    <isActive>false</isActive>
                    <label>Agency Secretary</label>
                </value>
                <value>
                    <fullName>Agency Undersecretary</fullName>
                    <isActive>false</isActive>
                    <label>Agency Undersecretary</label>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Chief Information Officer</fullName>
                </value>
                <value>
                    <fullName>Climate Policy</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Environmental Justice and Tribal</fullName>
                </value>
                <value>
                    <fullName>Environmental Policy</fullName>
                </value>
                <value>
                    <fullName>Executive Office</fullName>
                </value>
                <value>
                    <fullName>Fiscal and Admin Programs</fullName>
                </value>
                <value>
                    <fullName>Health and Public Policy</fullName>
                </value>
                <value>
                    <fullName>Law Enforcement and Counsel</fullName>
                </value>
                <value>
                    <fullName>Legal Office</fullName>
                </value>
                <value>
                    <fullName>Legislative Affairs</fullName>
                </value>
                <value>
                    <fullName>Legislative Office</fullName>
                </value>
                <value>
                    <fullName>PRA</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Unified Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAMS_Role__c</fullName>
        <label>CAMS Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Assignor</fullName>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Reviewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Complaints_User__c</fullName>
        <formula>CONTAINS(Profile.Name, &apos;Complaint&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Complaints User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Category__c</fullName>
        <formula>IF(ProfileId=&apos;00ej0000000uJA4&apos;,&apos;Administrator&apos;,
CASE(Profile.Name, 
&apos;CAMS Agency Coordinator Platform User&apos;, &apos;Lightning Platform Starter&apos;, 
&apos;CAMS Agency Executive Platform User&apos;, &apos;Lightning Platform Starter&apos;, 
&apos;CAMS Agency Reviewer Platform User&apos;, &apos;Lightning Platform Starter&apos;, 
&apos;CAMS BDO Assigner Platform User&apos;, &apos;Lightning Platform Starter&apos;, 
&apos;CAMS BDO Coordinator Platform User&apos;, &apos;Lightning Platform Starter&apos;, 
&apos;CAMS BDO Executive Platform User&apos;, &apos;Lightning Platform Starter&apos;, 
&apos;CERS Help Desk&apos;, &apos;Service Cloud&apos;, 
&apos;Complaint Management Agency Platform User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Drinking Water Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;DTSC Evaluator Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;EZ Protect&apos;, &apos;Lightning Platform Starter&apos;, 
&apos;Pesticides Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Solid Waste Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;System Admin&apos;, &apos;Administrator&apos;, 
&apos;Toxic Substances Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Toxic Substances Northern Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Toxic Substances Southern Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Water Region 1 Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Water Region 2 Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Water Region 3 Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Water Region 4 Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Water Region 5 Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Water Region 6 Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Water Region 7 Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Water Region 8 Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Water Region 9 Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Water Rights Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Water State Board Complaint Management User&apos;, &apos;Lightning Platform Plus&apos;, 
&apos;Air Complaint Management User&apos;,&apos;Lightning Platform Plus&apos;,
&apos;CalEPA Standard Platform User&apos;,&apos;Lightning Platform Plus&apos;,
&apos;CAMS Agency Assigner Platform User&apos;,&apos;Lightning Platform Starter&apos;, 
ProfileId))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>License_Type__c</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.CELL</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>All_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>License_Type__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAMSARBActiveUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>BDO__c</columns>
        <columns>CAMS_Division_Program__c</columns>
        <columns>CAMS_Role__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>BDO__c</field>
            <operation>equals</operation>
            <value>ARB</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>CAMS</value>
        </filters>
        <label>CAMS ARB Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAMSActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>BDO__c</columns>
        <columns>CAMS_Division_Program__c</columns>
        <columns>CAMS_Role__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>CAMS</value>
        </filters>
        <label>CAMS Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAMSAgencyActiveUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>BDO__c</columns>
        <columns>CAMS_Division_Program__c</columns>
        <columns>CAMS_Role__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>BDO__c</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>CAMS</value>
        </filters>
        <label>CAMS Agency Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAMSCalRecycleActiveUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>BDO__c</columns>
        <columns>CAMS_Division_Program__c</columns>
        <columns>CAMS_Role__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>BDO__c</field>
            <operation>equals</operation>
            <value>CalRecycle</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>CAMS</value>
        </filters>
        <label>CAMS CalRecycle Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAMSDPRActiveUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>BDO__c</columns>
        <columns>CAMS_Division_Program__c</columns>
        <columns>CAMS_Role__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>BDO__c</field>
            <operation>equals</operation>
            <value>DPR</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>CAMS</value>
        </filters>
        <label>CAMS DPR Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAMSDTSCActiveUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>BDO__c</columns>
        <columns>CAMS_Division_Program__c</columns>
        <columns>CAMS_Role__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>BDO__c</field>
            <operation>equals</operation>
            <value>DTSC</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>CAMS</value>
        </filters>
        <label>CAMS DTSC Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAMSOEHHAActiveUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>BDO__c</columns>
        <columns>CAMS_Division_Program__c</columns>
        <columns>CAMS_Role__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>BDO__c</field>
            <operation>equals</operation>
            <value>OEHHA</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>CAMS</value>
        </filters>
        <label>CAMS OEHHA Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAMSSWRCBActiveUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>BDO__c</columns>
        <columns>CAMS_Division_Program__c</columns>
        <columns>CAMS_Role__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>BDO__c</field>
            <operation>equals</operation>
            <value>SWRCB</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>CAMS</value>
        </filters>
        <label>CAMS SWRCB Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Users_that_Havent_Logged_In</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <label>Users that Haven&apos;t Logged In</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>